--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     </div>
 
     <nav class="nav">
-      <a href="#home" class="nav-link active">Home</a>
-      <a href="#about" class="nav-link">About</a>
-      <a href="#resume" class="nav-link">Resume</a>
-      <a href="#skills" class="nav-link">Skills</a>
-      <a href="#projects" class="nav-link">Projects</a>
-      <a href="#blogs" class="nav-link">Blogs</a>
-      <a href="#contact" class="nav-link">Contact</a>
+      <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png"> Home</a>
+      <a href="#about" class="nav-link"><img class="icon" src="assets/icons/user.png"> About</a>
+      <a href="#resume" class="nav-link"><img class="icon" src="assets/icons/resume.png"> Resume</a>
+      <a href="#skills" class="nav-link"><img class="icon" src="assets/icons/skills.png"> Skills</a>
+      <a href="#projects" class="nav-link"><img class="icon" src="assets/icons/work.png"> Projects</a>
+      <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blog.png"> Blogs</a>
+      <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png"> Contact</a>
     </nav>
-
+    
     <div class="sidebar-footer">
       <small>© 2025 Prineet Kaur</small>
     </div>
@@ -190,97 +190,56 @@
 <!-- CONTACT SECTION -->
 
 <section id="contact" class="section contact-section">
-  <h2 class="section-title">Contact</h2>
+  <h2 class="section-title">
+    <span class="section-title-icon">📨</span> Contact
+  </h2>
 
   <div class="contact-wrapper" style="
       display: flex;
       gap: 40px;
-      align-items: stretch;     /* makes equal height */
+      align-items: stretch;
   ">
 
-    <!-- LEFT COLUMN -->
-    <div class="contact-left" style="
-        flex: 1;
-        background: #111;           /* dark background */
-        padding: 30px;
-        border-radius: 12px;
-        color: white;               /* white text */
-        box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    ">
-
+    <!-- LEFT -->
+    <div class="contact-left box" style="flex:1;">
       <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="margin-bottom: 5px;">Address</h3>
+        <h3 style="color: var(--text-lightgrey);">Address</h3>
         <p>Paris, France</p>
       </div>
 
       <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="margin-bottom: 5px;">Email Me</h3>
+        <h3 style="color: var(--text-lightgrey);">Email Me</h3>
         <p>bhurji.pk@gmail.com</p>
       </div>
 
-      <div style="overflow:hidden;width:100%;border-radius:10px;margin-top:20px;">
-        <iframe 
-          style="width:100%;height:250px;border:0;border-radius:10px;"
-          loading="lazy"
-          allowfullscreen
-          src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
-        </iframe>
-      </div>
+      <iframe 
+        style="width:100%;height:260px;border:0;border-radius:10px;margin-top:20px;"
+        src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+      </iframe>
     </div>
 
-    <!-- RIGHT COLUMN -->
-    <div class="contact-right" style="
-        flex: 1;
-        background: #111;               /* dark */
-        padding: 30px;
-        border-radius: 12px;
-        border: 2px solid;
-        border-image: linear-gradient(to right, #3495EB, #00FFA1) 1;
+    <!-- RIGHT -->
+    <div class="contact-right box" style="
+        flex:1;
+        border: 2px solid var(--mustard);
         text-align: center;
-        color: white;                   /* white text */
-        display: flex;
-        flex-direction: column;
-        justify-content: center;        /* vertically centered text */
-        box-shadow: 0 0 20px rgba(0,0,0,0.4);
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
     ">
-      <h3 style="margin-bottom: 20px;">Get in Touch</h3>
+      <h3 style="color: var(--text-lightgrey); margin-bottom:20px;">Get in Touch</h3>
 
       <p style="line-height: 26px; margin-bottom: 25px;">
-        Are you too keen on using AI and Data Technologies to build Innovative Products?
-
-        Leveraging the power of AI to improve Developer Experiences & Productivity?
-
-        Together we can create Product Solutions that Customers will Love...!
-
-        Let's Talk!
+        My inbox is always open. Whether you have a question or just want to say hi,
+        I’ll try my best to get back to you! <br><br>
+        Let's connect and discuss.
       </p>
 
-      <a href="mailto:bhurji.pk@gmail.com"
-        style="
-          display: inline-block;
-          padding: 12px 28px;
-          background: var(--accent-color);
-          color: white;
-          font-size: 18px;
-          border-radius: 6px;
-          text-decoration: none;
-          box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-        ">
-        Let's connect
-      </a>
+      <a href="mailto:bhurji.pk@gmail.com" class="btn">Let's connect</a>
     </div>
 
   </div>
 </section>
-
-<style>
-@media (max-width: 850px) {
-  .contact-wrapper {
-    flex-direction: column !important;
-  }
-}
-</style>
-
 
 
     
