--- a/index.html
+++ b/index.html
@@ -18,18 +18,25 @@
   <aside class="sidebar">
     <div class="profile">
       <img src="assets/img/mylogo.jpg" alt="Profile Photo">
-  <!--     <h2>Prineet Kaur</h2> 
-      <p class="role">Tech Product Enabler and Communicator</p>  -->
     </div>
 
     <!-- SOCIAL ICONS -->
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/prineetkaur/" target="https://www.linkedin.com/in/prineetkaur/"><img src="assets/icons/linkedin.png"></a>
-      <a href="https://github.com/PrineetKaur" target="https://github.com/PrineetKaur"><img src="assets/icons/github.png"></a>
-      <a href="https://medium.com/@bhurji.pk" target="https://medium.com/@bhurji.pk"><img src="assets/icons/medium.png"></a>
- <!-- <a href="https://substack.com" target="https://substack.com/@prineetkaur?"><img src="assets/icons/substack.png"></a>  -->
-      <a href="https://www.instagram.com/prineet.kaur/" target="https://www.instagram.com/prineet.kaur/"><img src="assets/icons/instagram.png"></a>
-      <a href="mailto:bhurji.pk@gmail.com"><img src="assets/icons/gmail.png"></a>
+      <a href="https://www.linkedin.com/in/prineetkaur/" target="_blank">
+        <img src="assets/icons/linkedin.png">
+      </a>
+      <a href="https://github.com/PrineetKaur" target="_blank">
+        <img src="assets/icons/github.png">
+      </a>
+      <a href="https://medium.com/@bhurji.pk" target="_blank">
+        <img src="assets/icons/medium.png">
+      </a>
+      <a href="https://www.instagram.com/prineet.kaur/" target="_blank">
+        <img src="assets/icons/instagram.png">
+      </a>
+      <a href="mailto:bhurji.pk@gmail.com">
+        <img src="assets/icons/gmail.png">
+      </a>
     </div>
 
     <nav class="nav">
@@ -41,7 +48,7 @@
       <a href="#blogs" class="nav-link"><img class="icon" src="assets/icons/blogs.png"> Blogs</a>
       <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png"> Contact</a>
     </nav>
-    
+
     <div class="sidebar-footer">
       <small>© 2025 Prineet Kaur</small>
     </div>
@@ -78,7 +85,7 @@
     </section>
 
     <!-- ABOUT -->
-    <section id="about" class="section">
+    <section id="about" class="section section-dark">
       <h2 class="section-title">About</h2>
       <p>
         I’m a passionate developer and product communicator with experience across DevOps, Developer Experience,
@@ -87,7 +94,7 @@
     </section>
 
     <!-- RESUME -->
-    <section id="resume" class="section">
+    <section id="resume" class="section section-mid">
       <h2 class="section-title">Resume</h2>
       <div class="resume-grid">
 
@@ -113,7 +120,7 @@
     </section>
 
     <!-- SKILLS -->
-    <section id="skills" class="section">
+    <section id="skills" class="section section-light">
       <h2 class="section-title">Skills</h2>
 
       <div class="skills-grid">
@@ -142,7 +149,7 @@
     </section>
 
     <!-- PROJECTS -->
-    <section id="projects" class="section">
+    <section id="projects" class="section section-dark">
       <h2 class="section-title">Projects</h2>
 
       <div class="cards">
@@ -169,7 +176,7 @@
     </section>
 
     <!-- BLOGS -->
-    <section id="blogs" class="section">
+    <section id="blogs" class="section section-mid">
       <h2 class="section-title">Blogs</h2>
 
       <div class="blog-list">
@@ -187,63 +194,45 @@
       </div>
     </section>
 
-<!-- CONTACT SECTION -->
+    <!-- CONTACT SECTION -->
+    <section id="contact" class="section section-light contact-section">
+      <h2 class="section-title">
+        <span class="section-title-icon">📨</span> Contact
+      </h2>
 
-<section id="contact" class="section contact-section">
-  <h2 class="section-title">
-    <span class="section-title-icon">📨</span> Contact
-  </h2>
+      <div class="contact-wrapper">
 
-  <div class="contact-wrapper" style="
-      display: flex;
-      gap: 40px;
-      align-items: stretch;
-  ">
+        <div class="contact-left box">
+          <div class="info-item">
+            <h3>Address</h3>
+            <p>Paris, France</p>
+          </div>
 
-    <!-- LEFT -->
-    <div class="contact-left box" style="flex:1;">
-      <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="color: var(--text-lightgrey);">Address</h3>
-        <p>Paris, France</p>
+          <div class="info-item">
+            <h3>Email Me</h3>
+            <p>bhurji.pk@gmail.com</p>
+          </div>
+
+          <iframe 
+            src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+          </iframe>
+        </div>
+
+        <div class="contact-right box">
+          <h3>Get in Touch</h3>
+
+          <p>
+            My inbox is always open. Whether you have a question or just want to say hi,
+            I’ll try my best to get back to you!
+          </p>
+
+          <a href="mailto:bhurji.pk@gmail.com" class="btn">Let's connect</a>
+        </div>
       </div>
+    </section>
 
-      <div class="info-item" style="margin-bottom: 25px;">
-        <h3 style="color: var(--text-lightgrey);">Email Me</h3>
-        <p>bhurji.pk@gmail.com</p>
-      </div>
-
-      <iframe 
-        style="width:100%;height:260px;border:0;border-radius:10px;margin-top:20px;"
-        src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
-      </iframe>
-    </div>
-
-    <!-- RIGHT -->
-    <div class="contact-right box" style="
-        flex:1;
-        border: 2px solid var(--mustard);
-        text-align: center;
-        display:flex;
-        flex-direction:column;
-        justify-content:center;
-    ">
-      <h3 style="color: var(--text-lightgrey); margin-bottom:20px;">Get in Touch</h3>
-
-      <p style="line-height: 26px; margin-bottom: 25px;">
-        My inbox is always open. Whether you have a question or just want to say hi,
-        I’ll try my best to get back to you! <br><br>
-        Let's connect and discuss.
-      </p>
-
-      <a href="mailto:bhurji.pk@gmail.com" class="btn">Let's connect</a>
-    </div>
-
-  </div>
-</section>
-
-
-    
-    <footer class="site-footer">
+    <!-- FIXED FOOTER BACKGROUND -->
+    <footer class="site-footer footer-dark">
       <p>PK Techfolio...Built with ❤️ using Github.</p>
     </footer>
 
